--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 name: Quinn Hart, UC Davis
-markdown: kramdown
+markdown: redcarpet
+markdown_ext: mkd,md
+
+redcarpet:
+  extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough", "space_after_headers", "with_toc_data", "fenced_code_blocks", "lax_spacing", "smart"]
